Corrige error en el análisis de cobertura de código